<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ELearning</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_utama_materi">Materi</string>
    <string name="menu_utama_latihan">Latihan</string>
    <string name="menu_utama_kuis">Kuis</string>
    <string name="menu_utama_keluar">Keluar</string>
    <string name="title_activity_materi">Materi</string>
    <string name="action_settings">Settings</string>
    <string name="materi_operasi_hitung_bilangan_bulat">Operasi Hitung Bilangan Bulat</string>
    <string name="materi_pengukuran_debit">Pengukuran Debit</string>
    <string name="materi_geometri">Geometri</string>
    <string name="materi_mengolah_data">Mengolah Data</string>
    <string name="materi_pecahan">Pecahan</string>
    <string name="materi_sistem_koordinat">Sistem Koordinat</string>
    <string name="materi_kembali">Kembali</string>
    <string name="title_activity_isi_materi">IsiMateri</string>
    <string name="image_string_content_description">todo</string>
    <string name="isi_materi_text"></string>
    <string name="isi_materi_kembali">Kembali</string>
    <string name="isi_materi_selanjutnya">Selanjutnya</string>
    <string name="title_activity_materi_geometri">MateriGeometri</string>
    <string name="title_activity_materi_pecahan">MateriPecahan</string>
    <string name="title_activity_materi_mengolah_data">MateriMengolahData</string>
    <string name="title_activity_materi_operasi_hitung_bilangan_bulat">MateriOperasiHitungBilanganBulat</string>
    <string name="title_activity_materi_pengukuran_debit">MateriPengukuranDebit</string>
    <string name="title_activity_materi_sistem_koordinat">MateriSistemKoordinat</string>
    <string name="title_activity_test_json">TestJson</string>
    <string name="info">Website Information from URL</string>
    <string name="wid">ID</string>
    <string name="name">Name</string>
    <string name="url">Website</string>
    <string name="pertanyaan">Pertanyaan</string>
    <string name="jawaban">Jawaban</string>
    <string name="Selanjutnya">Selanjutnya</string>
    <string name="NILAI">nilai</string>
    <string name="tvnilai">NILAI</string>
    <string name="Nilai">NILAI</string>
    <string name="Materi">Materi</string>
    <string name="Hasil">Hasil</string>
    <string name="Operasi_Hitung_Bilangan_Bulat">Operasi Hitung Bilangan Bulat</string>
    <string name="Hasil1">Hasil1</string>
    <string name="Pengukuran_Debit">Pengukuran Debit</string>
    <string name="Geometri">Geometri</string>
    <string name="Mengolah_Data">Mengolah Data</string>
    <string name="Pecahan">Pecahan</string>
    <string name="Sistem_Koordinat">Sistem Koordinat</string>
    <string name="Total_Nilai">Total Nilai</string>
    <string name="Kembali">Kembali</string>
    <string name="Kunci_Jawaban">Kunci Jawaban</string>
    <string name="Jawaban_Benar">Jawaban Benar</string>
    <string name="Pilihan_Jawaban">Pilihan Jawaban</string>
    <string name="lulusTidak">Lulus/Tidak</string>

</resources>