<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/btnMateriOperasiHitungBilanganBulat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/materi_operasi_hitung_bilangan_bulat" />

    <Button
        android:id="@+id/btnMateriPengukuranDebit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnMateriOperasiHitungBilanganBulat"
        android:layout_alignRight="@+id/btnMateriOperasiHitungBilanganBulat"
        android:layout_below="@+id/btnMateriOperasiHitungBilanganBulat"
        android:text="@string/materi_pengukuran_debit" />

    <Button
        android:id="@+id/btnMateriGeometri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnMateriPengukuranDebit"
        android:layout_alignStart="@+id/btnMateriPengukuranDebit"
        android:layout_below="@+id/btnMateriPengukuranDebit"
        android:text="@string/materi_geometri" />

    <Button
        android:id="@+id/btnMateriMengolahData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnMateriGeometri"
        android:layout_alignStart="@+id/btnMateriGeometri"
        android:layout_below="@+id/btnMateriGeometri"
        android:text="@string/materi_mengolah_data" />

    <Button
        android:id="@+id/btnMateriPecahan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnMateriMengolahData"
        android:layout_alignRight="@+id/btnMateriMengolahData"
        android:layout_below="@+id/btnMateriMengolahData"
        android:text="@string/materi_pecahan" />

    <Button
        android:id="@+id/btnMateriSistemKoordinat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnMateriPecahan"
        android:layout_alignRight="@+id/btnMateriPecahan"
        android:layout_below="@+id/btnMateriPecahan"
        android:text="@string/materi_sistem_koordinat" />

    <Button
        android:id="@+id/btnMateriKembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="28dp"
        android:text="@string/materi_kembali" />

</RelativeLayout>