<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/btnMenuUtamaKuis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/btnMenuUtamaLatihan"
        android:layout_centerVertical="true"
        android:text="@string/menu_utama_kuis"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btnMenuUtamaMateri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnMenuUtamaLatihan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/menu_utama_materi" />

    <Button
        android:id="@+id/btnMenuUtamaLatihan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnMenuUtamaKuis"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/btnMenuUtamaMateri"
        android:text="@string/menu_utama_latihan"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btnMenuUtamaKeluar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnMenuUtamaKuis"
        android:layout_marginTop="60dp"
        android:text="@string/menu_utama_keluar" />

</RelativeLayout>