<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" 
    tools:ignore="ExtraText">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imgBtnMateriMengolahDataPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_string_content_description"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/imgBtnMateriMengolahDataStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_string_content_description"
            android:src="@android:drawable/ic_media_pause" />
    </TableRow>

    <TextView
        android:id="@+id/txtViewMateriJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tableRow1"
        android:text="@string/isi_materi_text" 
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/txtViewMateriMengolahData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtViewMateriJudul"
        android:text="@string/isi_materi_text"
        android:textSize="16sp"/>
    
    <ImageButton
        android:id="@+id/imgBtnMateriMengolahDataTampil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtViewMateriMengolahData"
        android:contentDescription="@string/image_string_content_description"
        android:src="@android:drawable/bottom_bar" />

    <Button
        android:id="@+id/btnMateriMengolahDataKembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imgBtnMateriMengolahDataTampil"
        android:text="@string/isi_materi_kembali" />

    <Button
        android:id="@+id/btnMateriMengolahDataSelanjutnya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnMateriMengolahDataKembali"
        android:layout_alignBottom="@+id/btnMateriMengolahDataKembali"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/isi_materi_selanjutnya" />
    
    <ListView
        android:id="@+id/lvTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
    </ListView>
    

</RelativeLayout>
