<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context="${relativePackage}.${activityClass}"
    tools:ignore="ExtraText" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imgBtnMateriGeometriPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_string_content_description"
            android:src="@android:drawable/ic_media_play"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/imgBtnMateriGeometriStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_string_content_description"
            android:src="@android:drawable/ic_media_pause"
            android:visibility="invisible" />
    </TableRow>

    <TextView
        android:id="@+id/txtViewJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tableRow1"
        android:text="@string/isi_materi_text"
        android:textSize="24sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtViewMateriGeometri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtViewJudul"
        android:text="@string/isi_materi_text"
        android:textSize="16sp"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/imgBtnMateriGeometriTampil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtViewMateriGeometri"
        android:contentDescription="@string/image_string_content_description"
        android:src="@android:drawable/bottom_bar"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnMateriGeometriKembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imgBtnMateriGeometriTampil"
        android:text="@string/isi_materi_kembali"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnMateriGeometriSelanjutnya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnMateriGeometriKembali"
        android:layout_alignBottom="@+id/btnMateriGeometriKembali"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/isi_materi_selanjutnya"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/lvTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" >
    </ListView>

</RelativeLayout>