<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    tools:ignore="ExtraText,UnusedAttribute" >

   <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imgBtnMateriPengukuranDebitPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_string_content_description"
            android:src="@android:drawable/ic_media_play" 
             android:visibility="invisible"  />

        <ImageButton
            android:id="@+id/imgBtnMateriPengukuranDebitStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_string_content_description"
            android:src="@android:drawable/ic_media_pause" 
             android:visibility="invisible"  />
    
        </TableRow>

    <TextView
        android:id="@+id/txtViewJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tableRow1"
        android:text="@string/isi_materi_text" 
        android:textSize="24sp"
         android:visibility="invisible" />
    
    <TextView
        android:id="@+id/txtViewMateriPengukuranDebit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtViewJudul"
        android:text="@string/isi_materi_text"
        android:textSize="16sp"
         android:visibility="invisible"  />        

    <ImageButton
        android:id="@+id/imgBtnMateriPengukuranDebitTampil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtViewMateriPengukuranDebit"
        android:contentDescription="@string/image_string_content_description"
        android:src="@android:drawable/bottom_bar" 
         android:visibility="invisible"  />
    
    <Button
        android:id="@+id/btnMateriPengukuranDebitKembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imgBtnMateriPengukuranDebitTampil"
        android:text="@string/isi_materi_kembali" 
        android:visibility="invisible"  />
    
    <Button
        android:id="@+id/btnMateriPengukuranDebitSelanjutnya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnMateriPengukuranDebitKembali"
        android:layout_alignBottom="@+id/btnMateriPengukuranDebitKembali"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/isi_materi_selanjutnya" 
        android:visibility="invisible"  />
        
   <ListView
        android:id="@+id/lvMateriPengukuranDebit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
    </ListView>
    

</RelativeLayout>
