<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="${relativePackage}.${activityClass}" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imgBtnIsiMateriPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_string_content_description"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/imgBtnIsiMateriStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_string_content_description"
            android:src="@android:drawable/ic_media_pause" />
    </TableRow>

    <Button
        android:id="@+id/btnIsiMateriSelanjutnya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnIsiMateriKembali"
        android:layout_alignBottom="@+id/btnIsiMateriKembali"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/isi_materi_selanjutnya"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnIsiMateriKembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/isi_materi_kembali" />

 <ScrollView
     android:id="@+id/scrollView1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_below="@+id/tableRow1" >

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical" >

         <TextView
             android:id="@+id/txtViewIsiMateri"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="Di ambil dari database" />

         <ImageView
             android:id="@+id/ivIsiMateriTampil"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>

 </ScrollView>

</RelativeLayout>